# AgentScout

./: .env.example  .gitignore  LICENSE  pyproject.toml
.claude/skills/: scout-agent-projects.md  scout.md
