[project]
name = "agentscout"
version = "1.0.0"
description = "GitHub Agent项目自动发现 × 小红书内容一键生成"
requires-python = ">=3.10"
dependencies = [
    "PyGithub>=2.1.0",
    "openai>=1.0.0",
    "playwright>=1.40.0",
    "Pillow>=10.0.0",
    "html2image>=2.0.0",
    "Jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
]

[project.scripts]
agentscout = "src.pipeline:main"
